Fix attendance header collapsing problem
There was an even width distrabution through the horizontal div. There is now a 4:2:1 ratio

--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -50,6 +50,12 @@
     box-shadow: none;
   }
 
+  .halfratio{
+    width:50%;
+  }
+  .quarterratio{
+    width:25%;
+  }
 
   h1{
     font-size:24px;
